# Story-Genius

./: .env.example  .gitignore  90_DAY_EXECUTION_SUMMARY.md  90_DAY_PLAN.md  ACTUAL_ERROR_FOUND.md  COMPLETE_ERROR_ANALYSIS.md  COMPREHENSIVE_ERROR_REPORT.md  DELIVERY_MANIFEST.md  DIAGNOSTIC_RESULTS.md  DOCUMENTATION.md  DOCUMENT_INDEX.md  Dockerfile  ERROR_ANALYSIS_AND_SOLUTION.md  ERROR_INVESTIGATION_SUMMARY.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  RUN_STEPS.md  SOLUTION_FOUND.md  START_HERE.md  VISUAL_SUMMARY.md  check_users.py  database_schema_design.md  diagnostic.py  docker-compose.dev.yml  docker-compose.prod.yml  ngrok.yml  ngrok_full.yml  project_overview.md  pytest.ini  requirements.txt  service_boundaries_api_design.md  shorts_platform.db  start_live.ps1  test_generation.py  verify_video_gen.py
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  RUN_STEPS.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_veo_isolation.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/clients/: __init__.py  elevenlabs_client.py  freesound_client.py  storage_client.py  vertex_client.py
backend/src/core/: __init__.py  auth.py  dependencies.py  exceptions.py  logging.py  middleware.py  observability.py  rate_limit.py  retry.py  safety.py  security.py  settings.py  usage_logging.py  validation.py  (+1 more)
backend/tests/: __init__.py  conftest.py  test_projects.py  test_smoke.py  test_stories.py  test_video.py
(+737 files in other folders)
