[tool.poetry]
name = "story-genius-backend"
version = "0.1.0"
description = "Story-Genius Backend - AI-powered video generation platform"
authors = ["Story-Genius Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
google-cloud-aiplatform = "^1.38.0"
elevenlabs = "^1.0.0"
moviepy = "^2.0.0"
ffmpeg-python = "^0.2.0"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
Pillow = "^10.0.0"
edge-tts = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
pre-commit = "^3.6.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
